# simple-archive

./: Cargo.toml  LICENSE  README.md  build_script.rs
scripts/: generate-ffi
src/: error.rs  lib.rs  prelude.rs  reader.rs  writer.rs
src/carchive/: generated.rs  mod.rs
tests/: compression.rs  uncompress.rs
tests/fixtures/: random.txt  single_file.tar.bz2  test2.txt
